# simonskripnick-editor

./: .python-version  Dockerfile  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml
editor/: app.py  conftest.py  main.py
editor/apps/analyzer/: entities.py  router.py
editor/apps/analyzer/entities/: __init__.py  http.py  tree.py
editor/apps/analyzer/processors/: __init__.py  content_analyzer.py  paragraphs_creator.py  paragraphs_updater.py  pipeline_runner.py  sentences_creator.py  sentences_updater.py  spans_analyzer.py  spans_creator.py  text_analyzer.py  text_creator.py  tokens_updater.py
editor/apps/analyzer/processors/extractors/: __init__.py  paragraphs_extractor.py  sentences_extractor.py  spans_extractor.py  tree_extractor.py
editor/apps/analyzer/processors/loaders/: __init__.py  document_loader.py
editor/apps/analyzer/processors/transformers/: __init__.py  spans_transformer.py  tree_transformer.py
editor/apps/analyzer/tests/: conftest.py
editor/apps/analyzer/tests/api/: test_analyze_content.py  test_analyze_document.py
editor/apps/analyzer/tests/processors/: test_content_analyzer.py  test_paragraphs_creator.py  test_paragraphs_updater.py  test_pipeline_runner.py  test_sentences_creator.py  test_sentences_updater.py  test_spans_analyzer.py  test_spans_creator.py  test_text_analyzer.py  test_text_creator.py  test_tokens_updater.py
editor/apps/spellchecker/: router.py
editor/apps/spellchecker/entities/: __init__.py  tree.py
editor/apps/spellchecker/processors/: __init__.py  pipeline_runner.py
editor/apps/spellchecker/tests/: conftest.py
editor/base/: __init__.py  processors.py
(+26 files in other folders)
